# ADRES-Scraper-v2.0

./: .flake8  .gitignore  INSTALACION.md  LICENSE  QUICK_START.md  README.md  README_NEW.md  REFACTORIZACION_INFORME.md  RESUMEN_REFACTORIZACION.md  Taller_WebScraping_ADRES.html  Taller_WebScraping_ADRES.ipynb  config_mongodb_atlas.json  ejemplo_uso_optimizado.py  limpiar_redundantes.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
adres_scraper/: __init__.py
adres_scraper/config/: __init__.py  settings.py
adres_scraper/core/: __init__.py  content_analyzer.py  scraper.py
adres_scraper/downloaders/: __init__.py  pdf_downloader.py
adres_scraper/mongodb/: __init__.py  manager.py
adres_scraper/utils/: __init__.py  helpers.py  helpers_clean.py  helpers_old.py
archive_tests/: README.md  crear_base_adres.py  descargador_adres_atlas.py  descargador_adres_guias_reconfigurado.py  descargador_pdfs_adres.py  diagnostico_atlas_completo.py  monitor_visual.py  mostrar_resumen_proyecto.py  scraper_adres_optimizado.py
archive_tests/backup_redundantes/: conexion_manual_atlas.py  config_atlas.py  configurar_atlas.py  configurar_mongodb_local.py  demo_completa.py  demo_completa_mongodb.py  demo_sistema_completo.py  demo_sistema_simplificado.py  verificar_atlas.py  verificar_atlas_simple.py
config/: config_template.json
data/descargas_adres_guias/: analisis_pagina.json  metadatos_descarga.json
datos_json_adres/: cargar_en_mongodb.py  coleccion_completa_adres.json  resolucion_0743_743.json  resolucion_2587_2587.json  resolucion_2876_2876.json
docs/: principios_eticos.md
src/: analizador_contenido.py  mongodb_manager.py  validador_etico.py  web_scraper_adres.py
tests/: test_web_scraper.py
